--- a/tailwind-mini-projects/price-holder/index.html
+++ b/tailwind-mini-projects/price-holder/index.html
@@ -9,7 +9,7 @@
         font-family: 'Montserrat', sans-serif;
       }
     </style>
-    <title>Price Holder Sample</title>
+    <title>Price Holder Sample Simple</title>
   </head>
   <body>
     <div class="flex items-center justify-center min-h-screen bg-slate-800">
